src/test/ui/issues/issue-15783.stderr
error[E0308]: mismatched types
  --> $DIR/issue-15783.rs:8:19
   |
LL |     let msg = foo(x);
   |                   ^ expected slice `[&str]`, found array `[&str; 1]`
   |
   = note: expected enum `std::option::Option<&[&str]>`
              found enum `std::option::Option<&[&str; 1]>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
